# simgle

./: LICENSE  README.md  main.py  pyproject.toml
simgle/: cli.py  utils.py
